--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@ function myFunction() {
 <p>Adrian Mouton</p>
 		
 		<p>Call: <a href="tel:1-713-306-0919">713-306-0919</a></p>
-		<p>Email: <a href="mailto:adrian.mouton@gmail.com"></h2>adrian.mouton@gmail.com</a></p>
+		<p>Email: <a href="mailto:moutonhomes@gmail.com"></h2>moutonhomes@gmail.com</a></p>
 		
 	</div>
       <div class="container">
